[package]
name = "dyrah_client"
version = "0.1.0"
edition = "2024"

[dependencies]
egor = "0.8.0"
wrym = { git = "https://github.com/wick3dr0se/wrym", version = "0.1.0", default-features = false, features = [
    "laminar",
] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

dyrah_shared = { path = "../dyrah_shared" }
secs = "0.1.0"
image = "0.25.6"
